test/fails/bad_parsing/bad_declare3.lgl
declare f(); // No return type

void main() {
    return;
}